# turbosearch

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/local-docs/: cloud-notes.md  search-notes.md
examples/project-gutenberg/: urls.json
infra/terraform/: main.tf  outputs.tf  user_data.sh  variables.tf
scripts/: e2e_gutenberg.py  e2e_local.py  verify_qwen_turbovec.py
sql/: schema.sql
src/turbosearch/: api.py  chunking.py  cli.py  config.py  db.py  embeddings.py  ingest.py  overview.py  search.py
tests/: test_architecture_contract.py  test_chunking.py  test_directory_ingest.py  test_embedding_provider.py  test_ingest_metadata.py  test_llm_overview.py  test_metadata_candidates.py  test_s3_ingest.py  test_search_pipeline.py  test_vector_index.py
