[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turbosearch"
version = "0.1.0"
description = "Hybrid PostgreSQL/vector search with AI-style overviews for document collections."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "numpy>=1.26",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "requests>=2.32",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=3.0",
]
vector = [
  "turbovec>=0.1",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
turbosearch = "turbosearch.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
